Smart Tv Day1 - background stuff

--- a/frontend/src/app/pages/smart-tv/smart-tv.component.html
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.html
@@ -1,4 +1,11 @@
-<p>smart-tv works!</p>
-<div>
-    <router-outlet></router-outlet>
+<div class=all>
+    <div class=wrapper>
+        <img id="tv-rectangle" src="../../../../assets/tv-rectangle-day.png" alt="Background vector">
+        <img id="tv-sun" src="../../../../assets/Sun.png" alt="Background sun">
+        <span class="day_count">Day 1</span>
+        <img class="down_title" src="../../../../assets/open-ballot-day.png" alt="Open Ballot">
+        <p id="next_up_text">next up:</p>
+        <img class="next_up_img" src="../../../../assets/nu_secret_voting.png" alt="next up secret voting">
+        
+    </div>
 </div>
