Some backend things with users -not finished

--- a/frontend/src/app/pages/augmented-table/day/day.component.scss
+++ b/frontend/src/app/pages/augmented-table/day/day.component.scss
@@ -3,15 +3,23 @@
     height: 1080px;
     background-color: #E67E22;
     overflow: hidden;
+    text-align: center;
 }
 
 .wrapper {
     overflow: hidden;
-    text-align: center;
-    z-index: -1;
 }
 
 #backgroundSVG {
     height: 110%;
     width: 92%;
+}
+
+.topBar {
+    position: absolute;
+    left: 17%;
+    z-index: 1;
+}
+
+#topVector {
 }
