--- a/frontend/src/app/pages/augmented-table/day/day.component.html
+++ b/frontend/src/app/pages/augmented-table/day/day.component.html
@@ -1,5 +1,9 @@
 <div class=background>
-    <div class=wrapper> 
-        <img id=backgroundSVG src="../../../../assets/background.svg" alt="Background vector">
+    <div class=topBar>
+        <img id=topVector src="../../../../assets/augmented_table/Vector.png" alt="Vector">
+    </div>
+
+    <div class=wrapper>
+        <img id=backgroundSVG src="../../../../assets/augmented_table/background.svg" alt="Background vector">
     </div>
 </div>
