--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -24,7 +24,7 @@
     position: absolute;
     height: 93px;
     top: 18px;
-    left: 1270px;
+    left: 1165px;
 
     font-weight: normal;
     font-size: 103px;
@@ -33,6 +33,23 @@
     align-items: center;
     text-align: right;
 
+    color: #FFFFFF;
+}
+
+.night_count{
+    position: absolute;
+    height: 93px;
+    left: 1165px;
+    top: 32px;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 103px;
+    line-height: 128px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    
     color: #FFFFFF;
 }
 
@@ -48,8 +65,10 @@
     position: absolute;
     width: 231px;
     height: 231px;
-    left: 1870px;
-    top: 31px;
+    left: 1641px;
+    top: 31px;    
+
+    transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 
 
@@ -67,6 +86,13 @@
     line-height: 45px;
     display: flex;
     align-items: flex-end;
+}
+
+.next_up_butt{
+    position: absolute;
+    right: 5.06%;
+    top: 82.69%;
+    bottom: 4.63%;
 }
 
 .next_up_img{
