changed assets, fixing titles

--- a/frontend/src/app/pages/smart-tv/smart-tv.component.html
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.html
@@ -10,7 +10,7 @@
             <img class="next_up_img" src="../../../../assets/{{next_up_icon}}.png"  alt="next up secret voting" (click)="changeRound();">
             <p class="next_up_title">{{next_title}}</p>
         </div>
-        <div>
+        <div class="round">
             <p class="down_title">{{phase_title}}</p>
             <img class="down_vector" src="../../../../assets/{{round_title_path}}.png" alt="Title of round">
         </div>
