--- a/frontend/src/app/pages/augmented-table/augmented-table.component.html
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.html
@@ -1,7 +1,14 @@
 <div>
     <div class=all [style.background-color]="isDay() ?  '#E67E22' : '#34495E'">
         <div class=topBar>
-            <img id=topVector src="../../../../assets/augmented_table/Vector.png" alt="Vector">
+            <div>
+                <span>
+                    <img id=topVector src="../../../../assets/augmented_table/Vector.png" alt="Vector">
+                </span>
+                <div class=phases>
+                    <img  src="../../../../assets/augmented_table/Open Ballot.png" alt="Ballot">
+                </div>
+            </div>
         </div>
     
         <div class=wrapper>
