--- a/frontend/src/app/pages/augmented-table/augmented-table.component.scss
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.scss
@@ -19,8 +19,14 @@
 .topBar {
     position: absolute;
     left: 17%;
-    z-index: 1;
+    text-align: center;
+    // background-image: url("../../../assets/augmented_table/Vector.png");
 }
 
 #topVector {
+    z-index: 1;   
+}
+
+.phases {
+    z-index: 2;   
 }
