Round Display on Smart Tv fixed

--- a/frontend/src/app/pages/smart-tv/smart-tv.component.html
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.html
@@ -11,7 +11,7 @@
             <p class="next_up_title">{{next_title}}</p>
         </div>
         <div class="round">
-            <p class="down_title">{{phase_title}}</p>
+            <span class="down_title">{{phase_title}}</span>
             <img class="down_vector" src="../../../../assets/{{round_title_path}}.png" alt="Title of round">
         </div>
     </div>
