MOBILE fixed login making mainpage

--- a/frontend/src/app/pages/augmented-table/augmented-table.component.html
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.html
@@ -6,11 +6,10 @@
                     <img id=topVector src="../../../../assets/augmented_table/Vector.png" alt="Vector">
                 </span>
                 <div class=phases>
-                    <img  src="../../../../assets/augmented_table/Open Ballot.png" alt="Ballot">
+                    <img class=icon src="../../../../assets/augmented_table/Open Ballot.png" alt="Ballot">
                 </div>
             </div>
         </div>
-    
         <div class=wrapper>
             <img id=backgroundSVG src="../../../../assets/augmented_table/{{backgroundSVG}}.svg" alt="Background vector">
         </div>
