--- a/frontend/src/app/pages/augmented-table/augmented-table.component.scss
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.scss
@@ -1,32 +1,115 @@
 .all {
-    width: 1560px;
-    height: 1080px;
-    background-color: #E67E22;
-    overflow: hidden;
-    text-align: center;
-    overflow: hidden;
+  width: 1560px;
+  height: 1080px;
+  background-color: #e67e22;
+  overflow: hidden;
+  text-align: center;
+  overflow: hidden;
 }
 
 .wrapper {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 #backgroundSVG {
-    height: 110%;
-    width: 92%;
-}
-
-.topBar {
-    position: absolute;
-    left: 17%;
-    text-align: center;
-    // background-image: url("../../../assets/augmented_table/Vector.png");
+  height: 1221px;
+  width: 1446.5px;
+  margin-top: -69px;
 }
 
 #topVector {
-    z-index: 1;   
+  z-index: 1;
 }
 
 .phases {
-    z-index: 2;   
+  position: absolute;
+  left: 17%;
+  display: flex;
+  height: 99px;
+  width: 1046.5px;
+  background-image: url("../../../assets/augmented_table/Vector.png");
+}
+
+.f {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto
+}
+
+.phase {
+  margin-top: 28px;
+  margin-right: -9.5px;
+  margin-left: -9.5px;
+  height: 137px;
+  width: 162px;
+}
+
+.phaseWrapper {
+  position: relative;
+  margin: 0 auto;
+  border: #f39c12;
+  background-color: #f39c12;
+  border-radius: 50%;
+  height: 110px;
+  width: 113px;
+}
+
+.icon {
+  height: 81px;
+  width: 83px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.phaseText {
+  font-family: 'Revalia';
+  font-size: 20px;
+  color: white;
+  height: 50px;
+  width: 162px;
+  text-align: center;
+  text-shadow: -1px -2px rgba(0, 0, 0, 0.33);
+}
+
+.selectedPhase {
+  margin-top: 9px;
+  margin-right: -14px;
+  margin-left: -14px;
+  height: 174px;
+  width: 206px;
+}
+
+.selectedIcon {
+  height: 91px;
+  width: 93px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.selectedPhaseWrapper {
+  position: relative;
+  margin: 0 auto;
+  border: 7px solid #D35400;
+  background-color: #f39c12;
+  border-radius: 50%;
+  height: 139.71px;
+  width: 143.69px;
+}
+
+.selectedPhaseText {
+  font-family: 'Revalia';
+  font-size: 20px;
+  color: white;
+  height: 25px;
+  width: 206px;
+  text-align: center;
+  text-shadow: -1px -2px rgba(0, 0, 0, 0.33);
 }
