--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -12,6 +12,10 @@
   z-index: -1;
 }
 
+.middle {
+  text-align: center;
+}
+
 #tv-rectangle {
   position: absolute;
   width: 1920px;
@@ -21,18 +25,95 @@
   z-index: 0;
 }
 
+#suspect_container {
+  display: flex;
+  justify-content: center;
+  z-index: 4;
+  position: relative;
+  margin-top: -112px;
+  zoom: 1.1;
+}
+
+.suspects {
+  zoom: 1.1;
+  position: relative;
+}
+
+.hidePlayers {
+  display: none;
+}
+
+#final_words {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 74px;
+  z-index: 3;
+  position: relative;
+  color: #F5F7FA;
+  width: 1920px;
+  top: -100px;
+}
+
 .player_container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin: 20% 0;
+  margin: 21% 0;
   position: relative;
   z-index: 1;
 }
 
-.player_img {
-  
+.player_container * {
+  text-align: center;
+}
+
+.player_container_upper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 8% 0;
+  position: relative;
+  z-index: 1;
+  zoom: 0.8;
+}
+
+.player_container_upper * {
+  text-align: center;
+
+}
+
+.name_text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  color: #656D78;
+  background: #F5F7FA;
+  border-radius: 28px;
+  margin-bottom: 5%;
+  width: 206px;
+  height: 46px;
+}
+
+.name_text_down {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  color: #656D78;
+  background: #F5F7FA;
+  border-radius: 28px;
+  width: 206px;
+  right: -148px;
+  bottom: -146px;
+  height: 46px;
+  z-index: 5;
+  position: relative;
 }
 
 .day_count {
@@ -89,8 +170,8 @@
   position: absolute;
   width: 191px;
   height: 33px;
-  left: 1463px;
-  top: 944px;
+  left: 1668px;
+  top: 830px;
 
   font-style: normal;
   font-weight: normal;
@@ -132,30 +213,33 @@
 }
 
 .round {
-    width: 100%;
-    height: 1080px;
-    display: flex;
-    justify-content:center;
-    align-items: flex-end;
+  width: 100%;
+  height: 1080px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
-.round  *{
-    margin-left: 93px;
+.round * {
+  margin-left: 93px;
+  bottom: 0px;
+  position: absolute;
 }
+
 .down_title {
-    padding-bottom:100px;
-    padding-left:135px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 95px;
-    align-items: center;
-    color: #F5F7FA;
-    z-index: 10;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 95px;
+  align-items: center;
+  color: #F5F7FA;
+  z-index: 10;
+  padding-bottom: 80px;
+  padding-left: 48px;
 }
 
 .down_vector {
-    position: absolute;
-    // bottom: 0px;
-    // left:50%;
-    z-index: 1;
+  position: absolute;
+  // bottom: 0px;
+  // left:50%;
+  z-index: 1;
 }
