MOBILE minor changes to to routing

--- a/frontend/src/app/pages/mobile/login/login.component.html
+++ b/frontend/src/app/pages/mobile/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+<div id="container">
     <div>Enter Your Name</div>
     <input id="inputname" type="text" name="LoginName" placeholder="12 char max"><br>
     
@@ -17,4 +17,4 @@
     
     
     <input id="confirm" type="submit" value="" style="background:url(../../../../assets/checkbutton.png)">
-</body>
+</div>
