--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.html
@@ -1,2 +1,4 @@
-<p>home works!</p>
-<img id="waiting" src="../../../../assets/hourglass.png" alt="waitingscreen">
+<div class="background">
+
+    <img id="waiting" src="../../../../assets/hourglass.png" alt="waitingscreen">
+</div>
