--- a/frontend/src/app/pages/mobile/login/login.component.html
+++ b/frontend/src/app/pages/mobile/login/login.component.html
@@ -3,16 +3,11 @@
     <input id="inputname" type="text" name="LoginName" placeholder="12 char max"><br>
     
     <div>Select Your Avatar</div>
-    <div id="avatars">
-        <div class="avatar"><img  src="../../../../assets/players/player1mobile.png" alt="Avatar1"></div>
-        <div class="avatar"><img  src="../../../../assets/players/player2mobile.png" alt="Avatar2"></div>
-        <div class="avatar selected"><img  src="../../../../assets/players/player3mobile.png" alt="Avatar3"></div>
-        <div class="avatar"><img  src="../../../../assets/players/player4mobile.png" alt="Avatar4"></div>
-        <div class="avatar"><img  src="../../../../assets/players/player5mobile.png" alt="Avatar5"></div>
-        <div class="avatar"><img  src="../../../../assets/players/player6mobile.png" alt="Avatar6"></div>
-        <div class="avatar"><img  src="../../../../assets/players/player7mobile.png" alt="Avatar7"></div>
-        <div class="avatar"><img  src="../../../../assets/players/player8mobile.png" alt="Avatar8"></div>
-        <div class="avatar"><img  src="../../../../assets/players/player9mobile.png" alt="Avatar9"></div>
+    <div id="avatars" >
+        <div *ngFor="let number of [1,2,3,4,5,6,7,8,9]; let i = index;" 
+        [ngClass]="(i==selectedavatarindex)?'selected':''"
+        (click)="selectedavatar(i)"
+        class="avatar"> <img  src="../../../../assets/players/player{{number}}mobile.png" alt="Avatar{{number}}"></div>
     </div>
     
     
