--- a/frontend/src/app/pages/mobile/login/login.component.scss
+++ b/frontend/src/app/pages/mobile/login/login.component.scss
@@ -44,6 +44,7 @@
   height: 100px;
   cursor: pointer;
   filter:drop-shadow( 1px 3px 0px rgba(0, 0, 0, 0.31));
+  margin: 5px;
 }
 
 .avatar > img {
@@ -51,6 +52,7 @@
     display: block;
     margin: auto;
     margin-top: 4px;
+    
 }
 
 #confirm {
@@ -61,6 +63,8 @@
     left: 139px;
     top: 610px;
     border: none;
+    background: url("../../../../assets/checkbutton.png");
+    text-decoration: none;;
 }
 
 .selected{
