--- a/frontend/src/app/pages/mobile/mainpage/mainpage.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/mainpage.component.html
@@ -1,14 +1,13 @@
 <div class="background">
-    <ami-fullstack-home></ami-fullstack-home> 
+    <ami-fullstack-home></ami-fullstack-home>
     <ami-fullstack-info></ami-fullstack-info>
     <ami-fullstack-voting></ami-fullstack-voting>
     <div class="navbar">
-        <a href="#info"> <img src="../../../../assets/mobile/infonavbar.png" alt="Info"> 
+        <a href="#info"> <img src="/assets/mobile/infonavbar.png" alt="Info">
         </a>
-            <a href="#home" class="active"> <img src="../../../../assets/mobile/homenavbar.png" alt="Home">
+        <a href="#home" class="active"> <img src="/assets/mobile/homenavbar.png" alt="Home">
         </a>
-        <a href="#voting" class="inactive"> <img src="../../../../assets/mobile/votingnavbar.png" alt="Voting"> </a>
+        <a href="#voting" class="inactive"> <img src="/assets/mobile/votingnavbar.png" alt="Voting"> </a>
     </div>
+    <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>   
