--- a/frontend/src/app/pages/smart-tv/smart-tv.component.html
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.html
@@ -6,9 +6,13 @@
     <div class="middle">
       <div [className]="isSecretVoting() ? 'player_container_upper' : 'player_container'">
         <div *ngFor="let player of players; let i=index">
-          <div [class.hidePlayers]="isSecretVoting() && isSuspect(i)" [style.margin]="!isSuspect(i) && isSecretVoting() ? '0px 25px' : '0px 0px'">
+          <div [class.hidePlayers]="isSecretVoting() && isSuspect(i)"  [class.hidePlayers]="isSecretVoting() && isDead(i)"
+            [style.margin]="!isSuspect(i) && isSecretVoting() ? '0px 25px' : '0px 0px'">
             <div class="name_text">{{player.name}}</div>
             <img src="../../../../assets/players/{{player.avatar_path}}">
+          </div>
+          <div *ngIf="!isSecretVoting() && isDead(i)" class="card" >
+            <img src="../../../../assets/smart_tv/card{{deaths}}.png" alt="card icon">
           </div>
         </div>
       </div>
@@ -18,7 +22,8 @@
         their final words?</p>
       <div id="suspect_container" *ngIf="isSecretVoting()">
         <div *ngFor="let player of players; let i=index">
-          <div [class.hidePlayers]="isSecretVoting() && !isSuspect(i)" [style.margin]="isSuspect(i) ? '0px 100px' : '0px 0px'">
+          <div [class.hidePlayers]="isSecretVoting() && !isSuspect(i)"
+            [style.margin]="isSuspect(i) ? '0px 100px' : '0px 0px'">
             <div [className]="isSuspect(i) ? 'name_text_down' : 'name_text'">{{player.name}}</div>
             <img src="../../../../assets/players/{{player.avatar_path}}">
           </div>
@@ -26,7 +31,8 @@
       </div>
       <div>
         <p id="next_up_text">next up:</p>
-        <img class="next_up_img" src="../../../../assets/smart_tv/{{next_up_icon}}.png" alt="next up" (click)="changeRound();">
+        <img class="next_up_img" src="../../../../assets/smart_tv/{{next_up_icon}}.png" alt="next up"
+          (click)="changeRound();">
         <p class="next_up_title">{{next_title}}</p>
       </div>
       <div class="round">
