--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -16,6 +16,17 @@
   text-align: center;
 }
 
+.card {
+  display: flex;
+  justify-content: space-around;
+  width: 118px;
+  height: 151px;
+  margin-top: 4px;
+  border-radius: 12%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #tv-rectangle {
   position: absolute;
   width: 1920px;
@@ -58,7 +69,7 @@
 .player_container {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  //align-items: center;
   justify-content: space-around;
   margin: 21% 0;
   position: relative;
@@ -172,6 +183,7 @@
   height: 33px;
   left: 1668px;
   top: 830px;
+  margin-top: 1%;
 
   font-style: normal;
   font-weight: normal;
