--- a/frontend/src/app/pages/augmented-table/augmented-table.component.scss
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.scss
@@ -133,3 +133,17 @@
   text-align: center;
   text-shadow: -1px -2px rgba(0, 0, 0, 0.33);
 }
+
+.name_text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  color: #656D78;
+  background: #F5F7FA;
+  border-radius: 28px;
+  margin-bottom: 5%;
+  width: 206px;
+  height: 46px;
+}
