--- a/frontend/src/app/pages/mobile/login/login.component.html
+++ b/frontend/src/app/pages/mobile/login/login.component.html
@@ -9,7 +9,7 @@
             <div *ngFor="let number of [1,2,3,4,5,6,7,8,9]; let i = index;" 
             [ngClass]="(i==selectedavatarindex)?'selected':''"
             (click)="selectedavatar(i)"
-            class="avatar"> <img  src="../../../../assets/players/player{{number}}mobile.png" alt="Avatar{{number}}"></div>
+            class="avatar"> <img  src="../../../../assets/players/mobile_player{{number}}.png" alt="Avatar{{number}}"></div>
         </div>
         
         <button id="confirm"  (click) = "addUser()" type="button" value="" ></button>
